various spacing/margin fixes

--- a/frontend/src/styles/backLink.module.css
+++ b/frontend/src/styles/backLink.module.css
@@ -29,8 +29,7 @@
         background-color: var(--color-background);
         width: 100%;
         padding-bottom: 10px;
-        padding-left: 7.1vw;
-
+        padding-left: 6.4vw;
     }
 
     .backLink a {
