--- a/frontend/src/styles/footer.module.css
+++ b/frontend/src/styles/footer.module.css
@@ -7,6 +7,7 @@
 
 .footer p {
     color: var(--color-background);
+    margin-bottom: 2px;
 }
 
 .gridItem {
