--- a/frontend/src/styles/socialLinks.module.css
+++ b/frontend/src/styles/socialLinks.module.css
@@ -13,7 +13,7 @@
   border-radius: 5px;
   margin-right: 0.8em;
   padding: 0.4em;
-  width: 2.25em;
+  width: 40px;
 }
 
 @media (prefers-color-scheme: dark) {
