--- a/frontend/src/styles/studentlist.module.css
+++ b/frontend/src/styles/studentlist.module.css
@@ -33,9 +33,9 @@
 .studentGrid {
   display: flex;
   flex-wrap: wrap;
-  margin: 3.1vw 7.5vw;
-  margin: 0 7.5vw 3.1vw 7.5vw;
-  gap: 3.1vw;
+  margin: 0 7.5vw 75px 7.5vw;
+  column-gap: 3vw;
+  row-gap: 5vw;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -50,16 +50,12 @@
   }
 
   .studentGrid {
-    margin: 1rem 7.1vw;
+    row-gap: 5.5vw;
   }
 }
 
 @media only screen and (max-width: 600px) {
-  .sortHead {
-    margin: 1rem 7.1vw;
-  }
-
   .studentGrid {
-    margin: 1rem 7.1vw;
+    row-gap: 7vw;
   }
 }
